--- a/src/dashboard/templates/profile.html
+++ b/src/dashboard/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load static i18n %}
 
-{% block title %}User Profile - Property Management System{% endblock %}
+{% block title %}{% trans 'User Profile' %} - {% trans 'Property Management System' %}{% endblock %}
 
 {% block content %}
 <section class="py-5">
@@ -12,8 +12,8 @@
           <div class="card-header bg-primary p-4">
             <div class="row align-items-center">
               <div class="col-md-8">
-                <h3 class="text-white mb-0">User Profile</h3>
-                <p class="text-white opacity-8 mb-0">Manage your account information</p>
+                <h3 class="text-white mb-0">{% trans 'User Profile' %}</h3>
+                <p class="text-white opacity-8 mb-0">{% trans 'Manage your account information' %}</p>
               </div>
               <div class="col-md-4 text-end">
                 <i class="fa fa-user-circle text-white opacity-8" style="font-size: 4rem;"></i>
@@ -24,18 +24,18 @@
             <div class="row">
               <div class="col-12">
                 <div class="mb-4">
-                  <h5 class="font-weight-bolder">Account Information</h5>
+                  <h5 class="font-weight-bolder">{% trans 'Account Information' %}</h5>
                 </div>
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label class="form-control-label">Email</label>
+                      <label class="form-control-label">{% trans 'Email' %}</label>
                       <p class="form-control">{{ user.email }}</p>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label class="form-control-label">Role</label>
+                      <label class="form-control-label">{% trans 'Role' %}</label>
                       <p class="form-control">{{ role_name }}</p>
                     </div>
                   </div>
@@ -43,18 +43,18 @@
 
                 {% if profile_data %}
                 <div class="mb-4 mt-4">
-                  <h5 class="font-weight-bolder">Personal Information</h5>
+                  <h5 class="font-weight-bolder">{% trans 'Personal Information' %}</h5>
                 </div>
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label class="form-control-label">Name</label>
+                      <label class="form-control-label">{% trans 'Name' %}</label>
                       <p class="form-control">{{ profile_data.name }}</p>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label class="form-control-label">Contact Information</label>
+                      <label class="form-control-label">{% trans 'Contact Information' %}</label>
                       <p class="form-control">{{ profile_data.contact_info }}</p>
                     </div>
                   </div>
@@ -63,10 +63,10 @@
 
                 <div class="d-flex justify-content-end mt-4">
                   <button type="button" class="btn bg-gradient-primary mb-0" data-bs-toggle="modal" data-bs-target="#editProfileModal">
-                    <i class="fas fa-edit me-2"></i>Edit Profile
+                    <i class="fas fa-edit me-2"></i>{% trans 'Edit Profile' %}
                   </button>
                   <a href="{% url 'password_change' %}" class="btn bg-gradient-info mb-0 ms-2">
-                    <i class="fas fa-key me-2"></i>Change Password
+                    <i class="fas fa-key me-2"></i>{% trans 'Change Password' %}
                   </a>
                 </div>
               </div>
@@ -85,7 +85,7 @@
       <form method="post" action="{% url 'profile_edit' %}">
         {% csrf_token %}
         <div class="modal-header">
-          <h5 class="modal-title">Edit Profile</h5>
+          <h5 class="modal-title">{% trans 'Edit Profile' %}</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -111,12 +111,12 @@
               </div>
             </div>
           {% else %}
-            <p class="text-secondary mb-0">No editable profile fields available.</p>
+            <p class="text-secondary mb-0">{% trans 'No editable profile fields available.' %}</p>
           {% endif %}
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-          <button type="submit" class="btn btn-primary">Save</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{% trans 'Cancel' %}</button>
+          <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
         </div>
       </form>
     </div>
