--- a/src/leases/templates/leases/rentalagreement_confirm_delete.html
+++ b/src/leases/templates/leases/rentalagreement_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load static i18n %}
 
-{% block title %}Delete Rental Agreement{% endblock %}
+{% block title %}{% trans 'Delete Rental Agreement' %}{% endblock %}
 
 {% block content %}
 <div class="container-fluid py-4">
@@ -9,14 +9,14 @@
     <div class="col-12 col-lg-8">
       <div class="card mb-4">
         <div class="card-header pb-0 d-flex justify-content-between align-items-center">
-          <h6>Delete Rental Agreement</h6>
+          <h6>{% trans 'Delete Rental Agreement' %}</h6>
         </div>
         <div class="card-body">
-          <p>Are you sure you want to delete this rental agreement?</p>
+          <p>{% trans 'Are you sure you want to delete this rental agreement?' %}</p>
           <form method="post">
             {% csrf_token %}
-            <a href="{% url 'rentalagreement_list' %}" class="btn btn-secondary">Cancel</a>
-            <button type="submit" class="btn btn-danger">Delete</button>
+            <a href="{% url 'rentalagreement_list' %}" class="btn btn-secondary">{% trans 'Cancel' %}</a>
+            <button type="submit" class="btn btn-danger">{% trans 'Delete' %}</button>
           </form>
         </div>
       </div>
