--- a/src/leases/templates/leases/rentalagreement_list.html
+++ b/src/leases/templates/leases/rentalagreement_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load static i18n %}
 
-{% block title %}Rental Agreements{% endblock %}
+{% block title %}{% trans 'Rental Agreements' %}{% endblock %}
 
 {% block content %}
 <div class="container-fluid py-4">
@@ -9,9 +9,9 @@
     <div class="col-12">
       <div class="card mb-4">
         <div class="card-header pb-0 d-flex justify-content-between align-items-center">
-          <h6>Rental Agreements</h6>
+          <h6>{% trans 'Rental Agreements' %}</h6>
           <a href="#" class="btn btn-sm btn-success" data-modal-target="addAgreementModal">
-            <i class="fas fa-plus me-1"></i> Add Agreement
+            <i class="fas fa-plus me-1"></i> {% trans 'Add Agreement' %}
           </a>
         </div>
         <div class="card-body px-0 pt-0 pb-2">
@@ -19,16 +19,16 @@
             <table class="table align-items-center mb-0">
               <thead>
                 <tr>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Tenant</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Unit</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Start</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">End</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Base rent</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Coop</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Electricity</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Gas</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Other</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Actions</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{% trans 'Tenant' %}</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{% trans 'Unit' %}</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{% trans 'Start' %}</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{% trans 'End' %}</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{% trans 'Base rent' %}</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{% trans 'Coop' %}</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{% trans 'Electricity' %}</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{% trans 'Gas' %}</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{% trans 'Other' %}</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{% trans 'Actions' %}</th>
                 </tr>
               </thead>
               <tbody>
@@ -44,13 +44,13 @@
                   <td>{{ ra.gas }}</td>
                   <td>{{ ra.other_fees }}</td>
                   <td>
-                    <a class="text-secondary font-weight-bold text-xs me-2" href="{% url 'rentalagreement_edit' ra.pk %}"><i class="fas fa-edit"></i> Edit</a>
-                    <a class="text-danger font-weight-bold text-xs" href="{% url 'rentalagreement_delete' ra.pk %}"><i class="fas fa-trash"></i> Delete</a>
+                    <a class="text-secondary font-weight-bold text-xs me-2" href="{% url 'rentalagreement_edit' ra.pk %}"><i class="fas fa-edit"></i> {% trans 'Edit' %}</a>
+                    <a class="text-danger font-weight-bold text-xs" href="{% url 'rentalagreement_delete' ra.pk %}"><i class="fas fa-trash"></i> {% trans 'Delete' %}</a>
                   </td>
                 </tr>
                 {% empty %}
                 <tr>
-                  <td colspan="10" class="p-4"><em>No rental agreements yet.</em></td>
+                  <td colspan="10" class="p-4"><em>{% trans 'No rental agreements yet.' %}</em></td>
                 </tr>
                 {% endfor %}
               </tbody>
@@ -69,7 +69,7 @@
       <form method="post" action="{% url 'rentalagreement_add' %}">
         {% csrf_token %}
         <div class="modal-header">
-          <h5 class="modal-title">Add Rental Agreement</h5>
+          <h5 class="modal-title">{% trans 'Add Rental Agreement' %}</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -175,8 +175,8 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-          <button type="submit" class="btn btn-primary">Save</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{% trans 'Cancel' %}</button>
+          <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
         </div>
       </form>
     </div>
