--- a/src/properties/templates/building_list.html
+++ b/src/properties/templates/building_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load static i18n %}
 
-{% block title %}Buildings{% endblock %}
+{% block title %}{% trans 'Buildings' %}{% endblock %}
 
 {% block content %}
 <div class="container-fluid py-4">
@@ -9,9 +9,9 @@
     <div class="col-12">
       <div class="card mb-4">
         <div class="card-header pb-0 d-flex justify-content-between align-items-center">
-          <h6>Buildings</h6>
+          <h6>{% trans 'Buildings' %}</h6>
           <a href="#" class="btn btn-primary btn-sm" data-modal-target="addBuildingModal">
-            <i class="fas fa-plus me-2"></i> Add Building
+            <i class="fas fa-plus me-2"></i> {% trans 'Add Building' %}
           </a>
         </div>
         <div class="card-body px-0 pt-0 pb-2">
@@ -19,9 +19,9 @@
             <table class="table align-items-center mb-0">
               <thead>
                 <tr>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Name</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Address</th>
-                  <th class="text-secondary opacity-7">Actions</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">{% trans 'Name' %}</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{% trans 'Address' %}</th>
+                  <th class="text-secondary opacity-7">{% trans 'Actions' %}</th>
                 </tr>
               </thead>
               <tbody>
@@ -30,12 +30,12 @@
                     <td>{{ b.name }}</td>
                     <td>{{ b.address }}, {{ b.city }} {{ b.postal_code }}</td>
                     <td>
-                      <a class="text-secondary me-3" href="{% url 'edit_building' b.id %}"><i class="fas fa-edit"></i> Edit</a>
-                      <a class="text-danger" href="{% url 'delete_building' b.id %}"><i class="fas fa-trash"></i> Delete</a>
+                      <a class="text-secondary me-3" href="{% url 'edit_building' b.id %}"><i class="fas fa-edit"></i> {% trans 'Edit' %}</a>
+                      <a class="text-danger" href="{% url 'delete_building' b.id %}"><i class="fas fa-trash"></i> {% trans 'Delete' %}</a>
                     </td>
                   </tr>
                 {% empty %}
-                  <tr><td colspan="3" class="text-center py-3">No buildings yet.</td></tr>
+                  <tr><td colspan="3" class="text-center py-3">{% trans 'No buildings yet.' %}</td></tr>
                 {% endfor %}
               </tbody>
             </table>
@@ -53,15 +53,15 @@
       <form method="post" action="{% url 'add_building' %}">
         {% csrf_token %}
         <div class="modal-header">
-          <h5 class="modal-title">Add Building</h5>
+          <h5 class="modal-title">{% trans 'Add Building' %}</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           {{ building_form.as_p }}
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-          <button type="submit" class="btn btn-primary">Save</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{% trans 'Cancel' %}</button>
+          <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
         </div>
       </form>
     </div>
