--- a/src/properties/templates/property_list.html
+++ b/src/properties/templates/property_list.html
@@ -109,7 +109,7 @@
                 <tr>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">{% trans 'Name' %}</th>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{% trans 'Address' %}</th>
-                  <th class="text-secondary opacity-7">{% trans 'Actions' %}</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{% trans 'Actions' %}</th>
                 </tr>
               </thead>
               <tbody>
