--- a/src/properties/templates/unit_detail.html
+++ b/src/properties/templates/unit_detail.html
@@ -32,7 +32,7 @@
                       <tr>
                         <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Name</th>
                         <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Serial</th>
-                        <th class="text-secondary opacity-7">Actions</th>
+                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Actions</th>
                       </tr>
                     </thead>
                     <tbody>
